--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h1 style=>
                         WEB DEVELOPER
                     </h1>
-                    <h2 style="text-transform: uppercase; font-family: 'Antic Slab', serif; margin-top: 0; font-size: 23px; color: #37495D;">
+                    <h2 id="open">
                         Open the door to the online world with us!
                     </h2>
                 </div>
